--- a/lang/nl/help/quiz/import.html
+++ b/lang/nl/help/quiz/import.html
@@ -10,7 +10,7 @@ Een aantal bestandsformaten worden ondersteund:
 <ul>
 <p>GIFT is het meest uitgebreide importformaat beschikbaar voor het importeren van Moodle test vragen vanuit een
 tekstbestand. Het is ontworpen als gemakkelijke importeermethode voor Moodle test vragen vanuit tekstbestanden. Het ondersteunt
-multiple choice, waar/onwaar, kort antwoord en numerieke vragen, evenals het invoeren van een __________ voor 
+multiple choice, waar/onwaar, kort antwoord, koppelvragen en numerieke vragen, evenals het invoeren van een __________ voor 
 het gatentekstformaat. Verschillende vragentypes kunnen gemixt worden in één tekstbestand en de opmaak ondersteund ook 
 commentaar, vraagnamen, feedback en procentuele weging van cijfers. Hieronder enkele voorbeelden:</p>
 <pre>
