--- a/mod/journal/mod.html
+++ b/mod/journal/mod.html
@@ -1,4 +1,10 @@
 <?php
+    if ($usehtmleditor = can_use_richtext_editor()) {
+        $defaultformat = FORMAT_HTML;
+    } else {
+        $defaultformat = FORMAT_MOODLE;
+    }
+
     if (!isset($form->name)) {
         $form->name = "";
     }
@@ -25,24 +31,42 @@
         <input type="text" name="name" size=30 value="<?php p($form->name) ?>">
     </td>
 </tr>
+
 <tr valign=top>
     <td align=right><p><b><?php print_string("journalquestion", "journal") ?>:</b></p>
-    <font SIZE="1">
+    <font size="1">
      <?php
         helpbutton("writing", get_string("helpwriting"), "moodle", true, true);
         echo "<br />";
         helpbutton("questions", get_string("helpquestions"), "moodle", true, true);
         echo "<br />";
-        emoticonhelpbutton("form", "intro");
+        if ($usehtmleditor) {
+           helpbutton("richtext", get_string("helprichtext"), "moodle", true, true);
+        } else {
+           emoticonhelpbutton("form", "intro");
+        } 
       ?>
       <br />
     </font>
-    
-    </TD>
+    </td>
     <td>
-        <textarea name="intro" rows=15 cols=30 wrap="virtual"><?php p($form->intro) ?></textarea>
+    <?php
+       print_textarea($usehtmleditor, 20, 60, 680, 400, "intro", $form->intro);
+
+       echo "<p align=right>";
+       helpbutton("textformat", get_string("formattexttype"));
+       print_string("formattexttype");
+       echo ":&nbsp;";
+       if (!$form->introformat) {
+           $form->introformat = $defaultformat;
+       }
+       choose_from_menu(format_text_menu(), "introformat", $form->introformat, "");
+       echo "</p>";
+    ?>
     </td>
 </tr>
+
+
 <tr valign=top>
     <td align=right><p><b><?php print_string("grade") ?>:</b></p></td>
     <td>
@@ -83,3 +107,11 @@
 <input type="submit" name=cancel value="<?php print_string("cancel") ?>">
 </form>
 </center>
+
+
+<?php 
+   if ($usehtmleditor) { 
+       print_richedit_javascript("form", "intro", "yes");
+   }
+?>
+
