--- a/admin/config.html
+++ b/admin/config.html
@@ -353,6 +353,21 @@
     <?php print_string("configfullnamedisplay") ?>
     </td>
 </tr>
+<tr valign=top>
+	<td align=right><p>forcelogin:</td>
+	<td>
+    <?php 
+       unset($options);
+       $options[0]  = get_string('no');
+       $options[1]  = get_string('yes');
+
+       choose_from_menu ($options, "forcelogin", $config->forcelogin, "", "", "");
+    ?>
+    </td>
+    <td>
+    <?php print_string("configforcelogin") ?>
+    </td>
+</tr>
 
 <tr>
     <td colspan=3 align=center>
