UNTESTED changes to allow multiple hosts to be used for POP3/IMAP/NNTP authentication
Please test them.

--- a/auth/nntp/config.html
+++ b/auth/nntp/config.html
@@ -15,6 +15,7 @@
 	</TD>
     <TD>
     <?php  print_string("auth_nntphost","auth") ?>
+    <?php  print_string("auth_multiplehosts","auth") ?>
     </TD>
 </TR>
 
