--- a/auth/pop3/config.html
+++ b/auth/pop3/config.html
@@ -17,6 +17,7 @@
 	</TD>
     <TD>
     <?php  print_string("auth_pop3host","auth") ?>
+    <?php  print_string("auth_multiplehosts","auth") ?>
     </TD>
 </TR>
 
