Improvements to forum groups.
New forum_discussions->groupid now stores the group ID for the
discussion.

--- a/mod/forum/post.html
+++ b/mod/forum/post.html
@@ -105,6 +105,7 @@
     <input type="hidden" name=discussion value="<?php p($post->discussion) ?>">
     <input type="hidden" name=parent     value="<?php p($post->parent) ?>">
     <input type="hidden" name=userid     value="<?php p($post->userid) ?>">
+    <input type="hidden" name=groupid    value="<?php p($post->groupid) ?>">
     <input type="hidden" name=edit       value="<?php p($post->edit) ?>">
     <input type="submit" value="<?php print_string("savechanges"); ?>">
     </td>
