--- a/user/edit.html
+++ b/user/edit.html
@@ -2,6 +2,9 @@
    if (!isset($user->htmleditor)) {
        $user->htmleditor = 1;
    }
+   if (!isset($user->picture)) {
+       $user->picture = NULL;
+   }
    if (empty($user->lang)) {
        $user->lang = $CFG->lang;
    }
