replaced incorrectly closed html tags, see bug 365

--- a/mod/forum/post.html
+++ b/mod/forum/post.html
@@ -84,7 +84,7 @@
 
 
 <tr valign=top>
-    <td align=right><p><b><?php print_string("attachment", "forum") ?>:<br \>(<?php print_string("optional") ?>)&nbsp;</b></p></td>
+    <td align=right><p><b><?php print_string("attachment", "forum") ?>:<br />(<?php print_string("optional") ?>)&nbsp;</b></p></td>
     <td>
     <?php $maxbytes = get_max_upload_file_size($CFG->maxbytes, $course->maxbytes, $forum->maxbytes); ?>
     <input type="hidden" name="MAX_FILE_SIZE" value="<?php echo $maxbytes ?>">
