--- a/mod/glossary/edit.html
+++ b/mod/glossary/edit.html
@@ -144,7 +144,7 @@ if (isset($errors)) {
     </td>
 </tr>
 <tr valign=top>
-    <td align=right><p><b><?php print_string("attachment", "glossary") ?>:<br \>(<?php print_string("optional") ?>)&nbsp;</b></p></td>
+    <td align=right><p><b><?php print_string("attachment", "glossary") ?>:<br />(<?php print_string("optional") ?>)&nbsp;</b></p></td>
     <td>
     <input type="hidden" name="MAX_FILE_SIZE" value="<?php echo get_max_upload_file_size() ?>">
     <input type="file" name="attachment" size=40> 
