--- a/mod/glossary/mod.html
+++ b/mod/glossary/mod.html
@@ -61,9 +61,9 @@ if (!isset($form->showspecial)) {
      <font size="1">
      <?php
         helpbutton("description", get_string("description"), "glossary", true, true);
-        echo "<br \>";
+        echo "<br />";
         helpbutton("writing", get_string("helpwriting"), "moodle", true, true);
-        echo "<br \>";
+        echo "<br />";
         helpbutton("text", get_string("helptext"), "moodle", true, true);
      ?>
      <br />
