--- a/mod/resource/mod.html
+++ b/mod/resource/mod.html
@@ -45,9 +45,9 @@
      <font size="1">
      <?php
         helpbutton("summary", get_string("summary"), "resource", true, true);
-        echo "<br \>";
+        echo "<br />";
         helpbutton("writing", get_string("helpwriting"), "moodle", true, true);
-        echo "<br \>";
+        echo "<br />";
         helpbutton("text", get_string("helptext"), "moodle", true, true);
      ?>
      <br />
