Now groups and members are restored and recoded when restoring courses. Existing courses are searched by name+description to add members to existing groups (when restoring over another course).

--- a/backup/restore_execute.html
+++ b/backup/restore_execute.html
@@ -227,6 +227,14 @@
         }
     }
 
+    //Now create groups as needed
+    if ($status) {
+        echo "<li>".get_string("creatinggroups");
+        if (!$status = restore_create_groups($restore,$xml_file)) {
+            notify("Could not restore groups!");
+        }
+    }
+
     //Now create course modules as needed
     if ($status) {
         echo "<li>".get_string("creatingcoursemodules");
